--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "bkmk"
-version = "0.0.1"
+version = "0.0.2.dev1"
 authors = [
   { name="Ximin Luo", email="infinity0@pwned.gg" },
 ]
